--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,7 @@
 server:
   port: 8080
+  tomcat:
+    max-part-count: 20
 api:
   prefix: /api/v1
 
@@ -37,6 +39,7 @@ spring:
       enabled: true
       max-file-size: 10MB
       max-request-size: 10MB
+      file-size-threshold: 2MB
     session:
       cookie:
       name: JSESSIONID
